feat: Android Base module
Signed-off-by: Hu Shenghao <dede.hu@qq.com>