@@ -2,7 +2,6 @@ package com.android_o.egg;
 
 import static com.dede.basic.provider.TimelineEvent.timelineEvent;
 
-import android.app.Activity;
 import android.os.Build;
 
 import androidx.annotation.NonNull;
@@ -13,7 +12,6 @@ import com.dede.basic.provider.EasterEggGroup;
 import com.dede.basic.provider.EasterEggProvider;
 import com.dede.basic.provider.TimelineEvent;
 
-import java.util.Arrays;
 import java.util.List;
 
 import javax.inject.Singleton;
@@ -40,13 +38,8 @@ public class AndroidOreoEasterEgg implements EasterEggProvider {
                         R.string.o_app_name,
                         R.string.o_android_nickname,
                         Build.VERSION_CODES.O,
-                        true
+                        PlatLogoActivity.class
                 ) {
-                    @Override
-                    public Class<? extends Activity> provideEasterEgg() {
-                        return PlatLogoActivity.class;
-                    }
-
                     @Override
                     public SnapshotProvider provideSnapshotProvider() {
                         return new SnapshotProvider();
@@ -57,13 +50,8 @@ public class AndroidOreoEasterEgg implements EasterEggProvider {
                         R.string.o_app_name,
                         R.string.o_android_nickname,
                         Build.VERSION_CODES.O_MR1,
-                        true
+                        PlatLogoActivity.Point1.class
                 ) {
-                    @Override
-                    public Class<? extends Activity> provideEasterEgg() {
-                        return PlatLogoActivity.Point1.class;
-                    }
-
                     @Override
                     public SnapshotProvider provideSnapshotProvider() {
                         return new SnapshotProvider(true);
@@ -78,7 +66,7 @@ public class AndroidOreoEasterEgg implements EasterEggProvider {
     @NonNull
     @Override
     public List<TimelineEvent> provideTimelineEvents() {
-        return Arrays.asList(
+        return List.of(
                 timelineEvent(
                         Build.VERSION_CODES.O_MR1,
                         "O MR1.\nReleased publicly as Android 8.1 in December 2017."
